# seo-solver

./: .gitignore  README.md
devdocs/business/: ideation.md
devdocs/development/: 1 - aws_typescript_foundation_workplan.md  1.5 - google_search_console_integration_workplan.md  1.6 - enhanced_validators_workplan.md  2 - additional_implementations_workplan.md  2 - google_search_console_integration_workplan.md  3 - claude_skill_workplan.md  gcp-search-console-setup.md
docs/: api-contract.md  issue-knowledge-base.md
docs/setup/: aws-go.md  aws-python.md  aws-rust.md  aws-typescript.md  cloudflare.md
implementations/aws-go/: go.mod  template.yaml
implementations/aws-python/: requirements.txt  template.yaml
implementations/aws-rust/: Cargo.toml  template.yaml
implementations/aws-typescript/: package-lock.json  package.json  samconfig.toml.example  template.yaml  tsconfig.json
implementations/cloudflare-typescript/: package.json  tsconfig.json  wrangler.toml
scripts/: sam-deploy-sample.sh  sso-login-sample.sh
shared/: api-spec.yaml
shared/schemas/: .gitkeep  issue.json  site.json  validation-request.json  validation-response.json
shared/test-fixtures/: .gitkeep
shared/test-fixtures/html/: invalid-schema-field.html  missing-jsonld.html  missing-viewport.html  valid-structured-data.html
shared/test-fixtures/requests/: site-register.json  validate-all-checks.json  validate-basic.json
shared/test-fixtures/responses/: error-invalid-url.json  validation-success.json  validation-with-issues.json
skill/: .gitkeep
(+19 files in other folders)
