[package]
name = "seo-solver-aws-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
aws-sdk-dynamodb = "1.0"
aws-config = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"

[dev-dependencies]
cargo-lambda = "1.0"
